--- a/pseudo-classes.html
+++ b/pseudo-classes.html
@@ -7,5 +7,9 @@
     </head>
     <body>
         <p>Hello, world!</p>
+        <div>
+            <h1>Hello, world!</h1>
+            <h1>Hello, world!</h1>
+        </div>
     </body>
 </html>
